# rustlibc

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
examples/: hello.c  sysprobe.c
include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  math.h  poll.h  pthread.h  sched.h  setjmp.h  signal.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  strings.h  time.h  unistd.h  wchar.h
include/sys/: mman.h  stat.h  types.h  uio.h  utsname.h  wait.h
src/: crt.rs  ctype.rs  dirent.rs  errno.rs  fcntl.rs  lib.rs  locale.rs  malloc.rs  math.rs  poll.rs  pthread.rs  sched.rs  setjmp.rs  signal.rs  stdio.rs  stdlib.rs  string.rs  strings.rs  time.rs  types.rs  unistd.rs  wchar.rs
src/arch/: aarch64.rs  mod.rs  x86_64.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  nr.rs
src/sys/: mman.rs  mod.rs  stat.rs  uio.rs  utsname.rs  wait.rs
